tests/NormalTests/paczka1/small_fuzzy/60099636.err
Error in line 4: 7Va6weN A217 82,7
Error in line 1: RCd A217 91,7
Error in line 10: A217 A217 46,9
